<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24sp"
    android:background="@drawable/universe2"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/createaccount"/>


        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginTop="16sp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginTop="16sp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            />

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginTop="16sp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSingUp"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginTop="16sp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:cornerRadius="8sp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

    </LinearLayout>
</ScrollView>