<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scaleX="1">

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="393dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/crooked_duck_name"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="408dp"
        android:layout_height="185dp"
        android:layout_marginBottom="17dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:src="@drawable/crooked_duck" />

    <TextView
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="14dp"
        android:autofillHints=""
        android:textSize="20dp"
        android:textColor="#000000"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/crooked_duck_address"
        app:layout_constraintBottom_toTopOf="@+id/crookedDuckPhotosButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/crookedDuckPhotosButton"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:text="@string/photos_button"
        app:layout_constraintBottom_toTopOf="@+id/crookedDuckMenuButton"
        app:layout_constraintEnd_toEndOf="@+id/crookedDuckMenuButton"
        app:layout_constraintStart_toStartOf="@+id/crookedDuckMenuButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <Button
        android:id="@+id/crookedDuckMenuButton"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginBottom="9dp"
        android:text="@string/menu_button"
        app:layout_constraintBottom_toTopOf="@+id/crookedDuckReviewButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crookedDuckPhotosButton" />

    <Button
        android:id="@+id/crookedDuckReviewButton"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginBottom="17dp"
        android:text="@string/reviews_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/crookedDuckMenuButton"
        app:layout_constraintTop_toBottomOf="@+id/crookedDuckMenuButton" />

</androidx.constraintlayout.widget.ConstraintLayout>